samples: cdc_acm: enable sanitycheck for Kinetis boards
Enable sanitycheck for FRDM-K64F and USB-KW24D512 boards

Signed-off-by: Johann Fischer <j.fischer@phytec.de>

--- a/samples/subsys/usb/cdc_acm/sample.yaml
+++ b/samples/subsys/usb/cdc_acm/sample.yaml
@@ -1,8 +1,8 @@
 sample:
   name: CDC ACM USB
 tests:
-  test_x86:
+  test:
     depends_on: usb_device
-    platform_whitelist: arduino_101 nrf52840_pca10056
+    platform_whitelist: arduino_101 nrf52840_pca10056 frdm_k64f
     tags: usb
     harness: console
