--- a/samples/net/rpl_node/prj_nrf52840_pca10056.conf
+++ b/samples/net/rpl_node/prj_nrf52840_pca10056.conf
@@ -35,8 +35,6 @@ CONFIG_PRINTK=y
 CONFIG_NET_BUF_LOG=n
 CONFIG_SYS_LOG_NET_BUF_LEVEL=1
 
-CONFIG_GPIO=y
-
 CONFIG_COAP=y
 CONFIG_COAP_WELL_KNOWN_BLOCK_WISE=y
 CONFIG_COAP_WELL_KNOWN_BLOCK_WISE_SIZE=64
@@ -44,28 +42,31 @@ CONFIG_NET_DEBUG_COAP=y
 
 CONFIG_NET_RPL=y
 CONFIG_NET_RPL_PROBING=y
-CONFIG_NET_RPL_STATS=y
-CONFIG_NET_RPL_MIN_HOP_RANK_INC=128
+CONFIG_NET_ROUTE=y
 
 CONFIG_NET_L2_IEEE802154=y
 CONFIG_NET_L2_IEEE802154_FRAGMENT=y
-CONFIG_IEEE802154_CC2520=y
-CONFIG_IEEE802154_CC2520_AUTO_ACK=n
+CONFIG_IEEE802154_NRF5=y
+CONFIG_IEEE802154_NRF5_DRV_NAME="IEEE802154_nrf5"
+CONFIG_IEEE802154_NRF5_INIT_PRIO=80
+CONFIG_NET_APP_SETTINGS=y
+CONFIG_NET_APP_IEEE802154_CHANNEL=18
+CONFIG_NET_APP_IEEE802154_DEV_NAME="IEEE802154_nrf5"
 
 # IP core debug
-CONFIG_NET_DEBUG_CORE=y
-CONFIG_NET_DEBUG_IPV6_NBR_CACHE=y
-CONFIG_NET_DEBUG_IPV6=y
+CONFIG_NET_DEBUG_CORE=n
+CONFIG_NET_DEBUG_IPV6_NBR_CACHE=n
+CONFIG_NET_DEBUG_IPV6=n
 CONFIG_NET_DEBUG_NET_BUF=n
 CONFIG_NET_DEBUG_UTILS=n
-CONFIG_NET_DEBUG_IF=y
-CONFIG_NET_DEBUG_ICMPV6=y
+CONFIG_NET_DEBUG_IF=n
+CONFIG_NET_DEBUG_ICMPV6=n
 CONFIG_NET_DEBUG_CONN=n
 CONFIG_NET_DEBUG_UDP=n
 CONFIG_NET_DEBUG_CONTEXT=n
-CONFIG_NET_DEBUG_ROUTE=y
+CONFIG_NET_DEBUG_ROUTE=n
 CONFIG_NET_DEBUG_6LO=n
-CONFIG_NET_DEBUG_RPL=y
+CONFIG_NET_DEBUG_RPL=n
 
 CONFIG_NET_STATISTICS=n
 CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
@@ -73,16 +74,6 @@ CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
 CONFIG_NET_SHELL=y
 
 # L2 Debug
-CONFIG_NET_DEBUG_L2_IEEE802154=n
+CONFIG_NET_DEBUG_L2_IEEE802154=y
 CONFIG_NET_DEBUG_L2_IEEE802154_FRAGMENT=n
-CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=0
-
-CONFIG_NET_APP_SETTINGS=y
-CONFIG_NET_APP_IEEE802154_CHANNEL=18
-CONFIG_NET_APP_IEEE802154_DEV_NAME="cc2520"
-
-CONFIG_IEEE802154_CC2520_RANDOM_MAC=n
-CONFIG_IEEE802154_CC2520_MAC4=0x00
-CONFIG_IEEE802154_CC2520_MAC5=0x00
-CONFIG_IEEE802154_CC2520_MAC6=0x00
-CONFIG_IEEE802154_CC2520_MAC7=0x03
+CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=4
