samples: net: rpl: Enhance RPL border router application
Add CoAP client to RPL BR application. Which can be used to
control leds and get rpl related information from leaf nodes
though CoAP messages. Build toplogy matrics and send it to
Web UI.

Enhanced Web UI components (Interfaces, RPL, Neighbors, Routes
and Topology tabs). Added buttons to control leds on lead nodes.

Added JSON support to handle led on/off requests from UI.

Signed-off-by: Ravi kumar Veeramally <ravikumar.veeramally@linux.intel.com>

--- a/samples/net/rpl_border_router/prj_nrf52840_pca10056.conf
+++ b/samples/net/rpl_border_router/prj_nrf52840_pca10056.conf
@@ -53,6 +53,9 @@ CONFIG_WEBSOCKET_CONSOLE=n
 CONFIG_NET_TCP_BACKLOG_SIZE=1
 CONFIG_NET_APP_SERVER_NUM_CONN=2
 
+#CONFIG_NET_TCP_INIT_RETRANSMISSION_TIMEOUT=50=5000
+#CONFIG_NET_TCP_ACK_TIMEOUT=2000
+
 # Crypto support
 CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS_BUILTIN=y
@@ -63,7 +66,7 @@ CONFIG_MBEDTLS_HEAP_SIZE=12000
 # Logging
 CONFIG_SYS_LOG_SHOW_COLOR=y
 CONFIG_SYS_LOG_NET_LEVEL=4
-CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=2
+CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=4
 
 # Debugging
 CONFIG_NET_DEBUG_NET_PKT=n
@@ -97,26 +100,20 @@ CONFIG_NET_HOSTNAME_ENABLE=y
 # by zephyr.local name
 CONFIG_MDNS_RESPONDER=y
 
-# IEEE 802.15.4 options
-CONFIG_NET_L2_IEEE802154_SHELL=y
-CONFIG_NET_L2_IEEE802154=y
-CONFIG_NET_L2_IEEE802154_FRAGMENT=y
-CONFIG_NET_APP_IEEE802154_CHANNEL=18
-CONFIG_NET_APP_IEEE802154_DEV_NAME="cc2520"
-CONFIG_IEEE802154_CC2520=y
-
 # IPv6 compression is needed for IEEE 802.15.4
 CONFIG_NET_6LO=y
 CONFIG_NET_6LO_CONTEXT=n
 
-# CC2520 options
-CONFIG_IEEE802154_CC2520_AUTO_ACK=y
-CONFIG_IEEE802154_CC2520_SPI_DRV_NAME="SPI_0"
-CONFIG_IEEE802154_CC2520_SPI_FREQ=4000000
-CONFIG_IEEE802154_CC2520_SPI_SLAVE=0
-CONFIG_GPIO=y
-CONFIG_SPI=y
-CONFIG_SPI_0=y
+# IEEE 802.15.4 options
+
+CONFIG_NET_L2_IEEE802154=y
+CONFIG_NET_L2_IEEE802154_FRAGMENT=y
+CONFIG_IEEE802154_NRF5=y
+CONFIG_IEEE802154_NRF5_DRV_NAME="IEEE802154_nrf5"
+CONFIG_IEEE802154_NRF5_INIT_PRIO=80
+CONFIG_NET_APP_SETTINGS=y
+CONFIG_NET_APP_IEEE802154_CHANNEL=18
+CONFIG_NET_APP_IEEE802154_DEV_NAME="IEEE802154_nrf5"
 
 #COAP
 CONFIG_COAP=y
@@ -131,12 +128,30 @@ CONFIG_NET_MGMT_EVENT_QUEUE_SIZE=20
 #JSON
 CONFIG_JSON_LIBRARY=y
 
-CONFIG_IEEE802154_CC2520_RANDOM_MAC=n
-CONFIG_IEEE802154_CC2520_MAC4=0x00
-CONFIG_IEEE802154_CC2520_MAC5=0x00
-CONFIG_IEEE802154_CC2520_MAC6=0x00
-CONFIG_IEEE802154_CC2520_MAC7=0x01
-
 CONFIG_NET_DEFAULT_IF_ETHERNET=y
 
+
+CONFIG_SYS_LOG_ETHERNET_LEVEL=4
+# Ethernet
+CONFIG_ETH_ENC28J60=y
+CONFIG_ETH_ENC28J60_0=y
+CONFIG_ETH_ENC28J60_0_MAC3=0
+CONFIG_ETH_ENC28J60_0_MAC4=0
+CONFIG_ETH_ENC28J60_0_MAC5=1
+
+CONFIG_ETH_ENC28J60_0_GPIO_PIN=30
+
+CONFIG_NET_L2_ETHERNET=y
 CONFIG_NET_DEBUG_L2_ETHERNET=n
+
+CONFIG_SPI=y
+CONFIG_GPIO=y
+CONFIG_SPI_NRF5=y
+CONFIG_SPI_0=y
+CONFIG_SPI_0_IRQ_PRI=80
+CONFIG_SPIM0_NRF52=y
+
+CONFIG_SPIM0_NRF52_GPIO_SCK_PIN=3
+CONFIG_SPIM0_NRF52_GPIO_MOSI_PIN=28
+CONFIG_SPIM0_NRF52_GPIO_MISO_PIN=4
+CONFIG_SPIM0_NRF52_GPIO_SS_PIN_0=29
