--- a/samples/net/rpl_border_router/prj_frdm_k64f_cc2520-netusb.conf
+++ b/samples/net/rpl_border_router/prj_frdm_k64f_cc2520-netusb.conf
@@ -53,6 +53,9 @@ CONFIG_WEBSOCKET_CONSOLE=n
 CONFIG_NET_TCP_BACKLOG_SIZE=1
 CONFIG_NET_APP_SERVER_NUM_CONN=2
 
+#CONFIG_NET_TCP_INIT_RETRANSMISSION_TIMEOUT=50=5000
+#CONFIG_NET_TCP_ACK_TIMEOUT=2000
+
 # Crypto support
 CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS_BUILTIN=y
@@ -140,3 +143,14 @@ CONFIG_IEEE802154_CC2520_MAC7=0x01
 CONFIG_NET_DEFAULT_IF_ETHERNET=y
 
 CONFIG_NET_DEBUG_L2_ETHERNET=n
+
+#NetUSB
+# USB Device settings
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+#CONFIG_SYS_LOG_USB_DRIVER_LEVEL=3
+#CONFIG_SYS_LOG_USB_DEVICE_LEVEL=3
+#CONFIG_SYS_LOG_USB_DEVICE_NETWORK_DEBUG_LEVEL=4
+
+# Select USB Configurations
+CONFIG_USB_DEVICE_NETWORK_ECM=y
