--- a/samples/net/rpl_border_router/prj_frdm_k64f_mcr20a-netusb.conf
+++ b/samples/net/rpl_border_router/prj_frdm_k64f_mcr20a-netusb.conf
@@ -53,6 +53,9 @@ CONFIG_WEBSOCKET_CONSOLE=n
 CONFIG_NET_TCP_BACKLOG_SIZE=1
 CONFIG_NET_APP_SERVER_NUM_CONN=2
 
+#CONFIG_NET_TCP_INIT_RETRANSMISSION_TIMEOUT=50=5000
+#CONFIG_NET_TCP_ACK_TIMEOUT=2000
+
 # Crypto support
 CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS_BUILTIN=y
@@ -63,12 +66,12 @@ CONFIG_MBEDTLS_HEAP_SIZE=12000
 # Logging
 CONFIG_SYS_LOG_SHOW_COLOR=y
 CONFIG_SYS_LOG_NET_LEVEL=4
-CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=2
+CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=4
 
 # Debugging
 CONFIG_NET_DEBUG_NET_PKT=n
 CONFIG_NET_DEBUG_WEBSOCKET=n
-CONFIG_NET_DEBUG_RPL=n
+CONFIG_NET_DEBUG_RPL=y
 CONFIG_NET_DEBUG_ROUTE=n
 CONFIG_NET_DEBUG_APP=n
 CONFIG_NET_DEBUG_IPV6=n
@@ -97,23 +100,20 @@ CONFIG_NET_HOSTNAME_ENABLE=y
 # by zephyr.local name
 CONFIG_MDNS_RESPONDER=y
 
+# IPv6 compression is needed for IEEE 802.15.4
+CONFIG_NET_6LO=y
+CONFIG_NET_6LO_CONTEXT=n
+
 # IEEE 802.15.4 options
 CONFIG_NET_L2_IEEE802154_SHELL=y
 CONFIG_NET_L2_IEEE802154=y
 CONFIG_NET_L2_IEEE802154_FRAGMENT=y
 CONFIG_NET_APP_IEEE802154_CHANNEL=18
-CONFIG_NET_APP_IEEE802154_DEV_NAME="cc2520"
-CONFIG_IEEE802154_CC2520=y
+CONFIG_NET_APP_IEEE802154_DEV_NAME="mcr20a"
+# IEEE MCR20A 802.15.4 options
+CONFIG_IEEE802154_MCR20A=y
 
-# IPv6 compression is needed for IEEE 802.15.4
-CONFIG_NET_6LO=y
-CONFIG_NET_6LO_CONTEXT=n
-
-# CC2520 options
-CONFIG_IEEE802154_CC2520_AUTO_ACK=y
-CONFIG_IEEE802154_CC2520_SPI_DRV_NAME="SPI_0"
-CONFIG_IEEE802154_CC2520_SPI_FREQ=4000000
-CONFIG_IEEE802154_CC2520_SPI_SLAVE=0
+# MCR20A board options
 CONFIG_GPIO=y
 CONFIG_SPI=y
 CONFIG_SPI_0=y
@@ -125,18 +125,23 @@ CONFIG_COAP=y
 CONFIG_NET_MGMT=y
 CONFIG_NET_MGMT_EVENT=y
 CONFIG_NET_MGMT_EVENT_INFO=y
-CONFIG_NET_MGMT_EVENT_STACK_SIZE=2048
+CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
 CONFIG_NET_MGMT_EVENT_QUEUE_SIZE=20
 
 #JSON
 CONFIG_JSON_LIBRARY=y
 
-CONFIG_IEEE802154_CC2520_RANDOM_MAC=n
-CONFIG_IEEE802154_CC2520_MAC4=0x00
-CONFIG_IEEE802154_CC2520_MAC5=0x00
-CONFIG_IEEE802154_CC2520_MAC6=0x00
-CONFIG_IEEE802154_CC2520_MAC7=0x01
-
 CONFIG_NET_DEFAULT_IF_ETHERNET=y
 
 CONFIG_NET_DEBUG_L2_ETHERNET=n
+
+#NetUSB
+# USB Device settings
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+#CONFIG_SYS_LOG_USB_DRIVER_LEVEL=3
+#CONFIG_SYS_LOG_USB_DEVICE_LEVEL=3
+#CONFIG_SYS_LOG_USB_DEVICE_NETWORK_DEBUG_LEVEL=4
+
+# Select USB Configurations
+CONFIG_USB_DEVICE_NETWORK_ECM=y
