--- a/boards/arm/frdm_k64f/frdm_k64f.dts
+++ b/boards/arm/frdm_k64f/frdm_k64f.dts
@@ -75,6 +75,12 @@
 };
 #endif
 
+&usbd {
+	compatible = "nxp,kinetis-usbd";
+	status = "ok";
+	num-bidir-endpoints = <8>;
+};
+
 &flash0 {
 	/*
 	 * For more information, see:
