nRF51 controller + nRF52 host

--- a/samples/bluetooth/beacon/prj.conf
+++ b/samples/bluetooth/beacon/prj.conf
@@ -1,3 +1,12 @@
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_DEVICE_NAME="Test beacon"
+
+CONFIG_BT_DEBUG_HCI_DRIVER=y
+CONFIG_BT_DEBUG_HCI_CORE=y
+
+CONFIG_UART_NRF5_FLOW_CONTROL=y
+CONFIG_UART_NRF5_GPIO_TX_PIN=34
+CONFIG_UART_NRF5_GPIO_RX_PIN=36
+CONFIG_UART_NRF5_GPIO_RTS_PIN=33
+CONFIG_UART_NRF5_GPIO_CTS_PIN=35
