--- a/samples/bluetooth/hci_uart/nrf5.conf
+++ b/samples/bluetooth/hci_uart/nrf5.conf
@@ -14,3 +14,8 @@ CONFIG_BT_MAX_CONN=16
 CONFIG_BT_TINYCRYPT_ECC=n
 CONFIG_BT_CTLR_DTM_HCI=y
 CONFIG_BT_CTLR_ASSERT_HANDLER=y
+
+CONFIG_UART_NRF5_GPIO_TX_PIN=13
+CONFIG_UART_NRF5_GPIO_RX_PIN=15
+CONFIG_UART_NRF5_GPIO_RTS_PIN=12
+CONFIG_UART_NRF5_GPIO_CTS_PIN=14
