--- a/samples/bluetooth/peripheral/prj.conf
+++ b/samples/bluetooth/peripheral/prj.conf
@@ -1,5 +1,18 @@
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
+
+CONFIG_BT_CTLR=n
+CONFIG_BT_H4=y
+CONFIG_STDOUT_CONSOLE=n
+CONFIG_UART_CONSOLE=n
+CONFIG_HAS_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_GPIO=y
+CONFIG_SERIAL=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_NRF5_FLOW_CONTROL=y
+CONFIG_BT_UART_ON_DEV_NAME="UART_0"
+
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
 CONFIG_BT_PERIPHERAL=y
@@ -7,3 +20,11 @@ CONFIG_BT_ATT_PREPARE_COUNT=2
 CONFIG_BT_PRIVACY=y
 CONFIG_BT_DEVICE_NAME="Test peripheral"
 CONFIG_BT_DEVICE_APPEARANCE=833
+
+CONFIG_BT_DEBUG_HCI_DRIVER=y
+CONFIG_BT_DEBUG_HCI_CORE=y
+
+CONFIG_UART_NRF5_GPIO_TX_PIN=34
+CONFIG_UART_NRF5_GPIO_RX_PIN=36
+CONFIG_UART_NRF5_GPIO_RTS_PIN=33
+CONFIG_UART_NRF5_GPIO_CTS_PIN=35
