--- a/samples/net/mesh_demo/rpl_bt_proxy/prj.conf
+++ b/samples/net/mesh_demo/rpl_bt_proxy/prj.conf
@@ -1,4 +1,6 @@
-CONFIG_BT=y
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
 CONFIG_BT_DEBUG_LOG=y
 
 CONFIG_BT_CTLR=n
@@ -11,20 +13,105 @@ CONFIG_GPIO=y
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_UART_NRF5_FLOW_CONTROL=y
-CONFIG_BT_UART_ON_DEV_NAME="UART_0"
 
-CONFIG_BT_SMP=y
-CONFIG_BT_SIGNING=y
-CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_ATT_PREPARE_COUNT=2
-CONFIG_BT_PRIVACY=y
-CONFIG_BT_DEVICE_NAME="Test peripheral"
-CONFIG_BT_DEVICE_APPEARANCE=833
+CONFIG_BT_OBSERVER=y
+CONFIG_BT_BROADCASTER=y
+CONFIG_BT_RX_BUF_COUNT=20
 
-CONFIG_BT_DEBUG_HCI_DRIVER=y
-CONFIG_BT_DEBUG_HCI_CORE=y
+CONFIG_BT_MESH=y
+CONFIG_BT_MESH_RELAY=y
+CONFIG_BT_MESH_SUBNET_COUNT=1
+CONFIG_BT_MESH_APP_KEY_COUNT=2
+CONFIG_BT_MESH_MODEL_GROUP_COUNT=2
+CONFIG_BT_MESH_ADV_BUF_COUNT=20
+CONFIG_BT_MESH_PB_ADV=n
+CONFIG_BT_MESH_CFG_CLI=y
+CONFIG_BT_MESH_RX_SDU_MAX=48
+CONFIG_BT_MESH_TX_SEG_MSG_COUNT=2
+CONFIG_BT_MESH_RX_SEG_MSG_COUNT=2
+
+#CONFIG_BT_MESH_DEBUG=y
+#CONFIG_BT_MESH_DEBUG_NET=y
+#CONFIG_BT_MESH_DEBUG_ACCESS=y
 
 CONFIG_UART_NRF5_GPIO_TX_PIN=34
 CONFIG_UART_NRF5_GPIO_RX_PIN=36
 CONFIG_UART_NRF5_GPIO_RTS_PIN=33
 CONFIG_UART_NRF5_GPIO_CTS_PIN=35
+
+##Networking
+CONFIG_NETWORKING=y
+
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
+
+CONFIG_NET_PKT_RX_COUNT=15
+CONFIG_NET_PKT_TX_COUNT=15
+CONFIG_NET_BUF_RX_COUNT=25
+CONFIG_NET_BUF_TX_COUNT=25
+
+CONFIG_NET_IPV6=y
+CONFIG_NET_IPV6_RA_RDNSS=n
+CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=3
+CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=4
+CONFIG_NET_IF_IPV6_PREFIX_COUNT=5
+
+CONFIG_NET_IPV6_ND=n
+CONFIG_NET_IPV6_DAD=y
+CONFIG_NET_IPV6_MLD=n
+
+CONFIG_NET_UDP=y
+
+CONFIG_NET_6LO=y
+CONFIG_NET_6LO_CONTEXT=y
+CONFIG_NET_MAX_6LO_CONTEXTS=3
+
+CONFIG_NET_LOG=y
+CONFIG_SYS_LOG_SHOW_COLOR=y
+CONFIG_SYS_LOG_NET_LEVEL=4
+CONFIG_INIT_STACKS=y
+CONFIG_PRINTK=y
+
+#CONFIG_NET_BUF_LOG=n
+#CONFIG_SYS_LOG_NET_BUF_LEVEL=1
+
+CONFIG_COAP=y
+CONFIG_COAP_WELL_KNOWN_BLOCK_WISE=y
+CONFIG_COAP_WELL_KNOWN_BLOCK_WISE_SIZE=64
+CONFIG_NET_DEBUG_COAP=y
+
+CONFIG_NET_RPL=y
+CONFIG_NET_RPL_PROBING=y
+CONFIG_NET_ROUTE=y
+
+CONFIG_NET_L2_IEEE802154=y
+CONFIG_NET_L2_IEEE802154_FRAGMENT=y
+CONFIG_IEEE802154_NRF5=y
+CONFIG_IEEE802154_NRF5_DRV_NAME="IEEE802154_nrf5"
+CONFIG_IEEE802154_NRF5_INIT_PRIO=80
+CONFIG_NET_APP_SETTINGS=y
+CONFIG_NET_APP_IEEE802154_CHANNEL=18
+CONFIG_NET_APP_IEEE802154_DEV_NAME="IEEE802154_nrf5"
+
+# IP core debug
+CONFIG_NET_DEBUG_CORE=n
+CONFIG_NET_DEBUG_IPV6_NBR_CACHE=n
+CONFIG_NET_DEBUG_IPV6=n
+#CONFIG_NET_DEBUG_NET_BUF=n
+CONFIG_NET_DEBUG_UTILS=n
+CONFIG_NET_DEBUG_IF=n
+CONFIG_NET_DEBUG_ICMPV6=n
+CONFIG_NET_DEBUG_CONN=n
+CONFIG_NET_DEBUG_UDP=n
+CONFIG_NET_DEBUG_CONTEXT=n
+CONFIG_NET_DEBUG_ROUTE=n
+CONFIG_NET_DEBUG_6LO=n
+CONFIG_NET_DEBUG_RPL=n
+
+CONFIG_NET_STATISTICS=n
+CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
+
+# L2 Debug
+CONFIG_NET_DEBUG_L2_IEEE802154=n
+CONFIG_NET_DEBUG_L2_IEEE802154_FRAGMENT=n
+#CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=4
