samples: net: mesh_demo: Update samples
Updated rpl_br, rpl_node and rpl_bt_proxy
Removed rpl_route node role

Signed-off-by: Ravi kumar Veeramally <ravikumar.veeramally@linux.intel.com>

--- a/samples/net/mesh_demo/rpl_node/prj_quark_se_c1000_devboard_1.conf
+++ b/samples/net/mesh_demo/rpl_node/prj_quark_se_c1000_devboard_1.conf
@@ -23,7 +23,7 @@ CONFIG_NET_IPV6_MLD=n
 CONFIG_NET_UDP=y
 
 CONFIG_NET_6LO=y
-CONFIG_NET_6LO_CONTEXT=y
+CONFIG_NET_6LO_CONTEXT=n
 CONFIG_NET_MAX_6LO_CONTEXTS=3
 
 CONFIG_NET_LOG=y
@@ -34,6 +34,8 @@ CONFIG_PRINTK=y
 
 CONFIG_NET_BUF_LOG=n
 CONFIG_SYS_LOG_NET_BUF_LEVEL=1
+
+CONFIG_GPIO=y
 
 CONFIG_COAP=y
 CONFIG_COAP_WELL_KNOWN_BLOCK_WISE=y
@@ -46,12 +48,8 @@ CONFIG_NET_ROUTE=y
 
 CONFIG_NET_L2_IEEE802154=y
 CONFIG_NET_L2_IEEE802154_FRAGMENT=y
-CONFIG_IEEE802154_NRF5=y
-CONFIG_IEEE802154_NRF5_DRV_NAME="IEEE802154_nrf5"
-CONFIG_IEEE802154_NRF5_INIT_PRIO=80
-CONFIG_NET_APP_SETTINGS=y
-CONFIG_NET_APP_IEEE802154_CHANNEL=18
-CONFIG_NET_APP_IEEE802154_DEV_NAME="IEEE802154_nrf5"
+CONFIG_IEEE802154_CC2520=y
+CONFIG_IEEE802154_CC2520_AUTO_ACK=n
 
 # IP core debug
 CONFIG_NET_DEBUG_CORE=n
@@ -66,14 +64,24 @@ CONFIG_NET_DEBUG_UDP=n
 CONFIG_NET_DEBUG_CONTEXT=n
 CONFIG_NET_DEBUG_ROUTE=n
 CONFIG_NET_DEBUG_6LO=n
-CONFIG_NET_DEBUG_RPL=y
+CONFIG_NET_DEBUG_RPL=n
 
 CONFIG_NET_STATISTICS=n
 CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
 
-CONFIG_NET_SHELL=y
+CONFIG_NET_SHELL=n
 
 # L2 Debug
-CONFIG_NET_DEBUG_L2_IEEE802154=y
+CONFIG_NET_DEBUG_L2_IEEE802154=n
 CONFIG_NET_DEBUG_L2_IEEE802154_FRAGMENT=n
-CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=4
+CONFIG_SYS_LOG_IEEE802154_DRIVER_LEVEL=0
+
+CONFIG_NET_APP_SETTINGS=y
+CONFIG_NET_APP_IEEE802154_CHANNEL=18
+CONFIG_NET_APP_IEEE802154_DEV_NAME="cc2520"
+
+CONFIG_IEEE802154_CC2520_RANDOM_MAC=n
+CONFIG_IEEE802154_CC2520_MAC4=0x00
+CONFIG_IEEE802154_CC2520_MAC5=0x00
+CONFIG_IEEE802154_CC2520_MAC6=0x00
+CONFIG_IEEE802154_CC2520_MAC7=0x01
