--- a/samples/net/mesh_demo/rpl_bt_proxy/prj.conf
+++ b/samples/net/mesh_demo/rpl_bt_proxy/prj.conf
@@ -30,9 +30,11 @@ CONFIG_BT_MESH_RX_SDU_MAX=48
 CONFIG_BT_MESH_TX_SEG_MSG_COUNT=2
 CONFIG_BT_MESH_RX_SEG_MSG_COUNT=2
 
-#CONFIG_BT_MESH_DEBUG=y
-#CONFIG_BT_MESH_DEBUG_NET=y
-#CONFIG_BT_MESH_DEBUG_ACCESS=y
+CONFIG_BT_MESH_DEBUG=n
+CONFIG_BT_MESH_DEBUG_NET=n
+CONFIG_BT_MESH_DEBUG_ACCESS=n
+CONFIG_BT_DEBUG_HCI_CORE=n
+CONFIG_BT_DEBUG_HCI_DRIVER=n
 
 CONFIG_UART_NRF5_GPIO_TX_PIN=34
 CONFIG_UART_NRF5_GPIO_RX_PIN=36
@@ -43,7 +45,6 @@ CONFIG_UART_NRF5_GPIO_CTS_PIN=35
 CONFIG_NETWORKING=y
 
 CONFIG_ENTROPY_GENERATOR=y
-CONFIG_TEST_RANDOM_GENERATOR=y
 
 CONFIG_NET_PKT_RX_COUNT=15
 CONFIG_NET_PKT_TX_COUNT=15
