samples: net: mesh: bt_proxy: Fix conf file array size
Fix missing conf file and if condition check against array
size.

Signed-off-by: Ravi kumar Veeramally <ravikumar.veeramally@linux.intel.com>

--- a/samples/net/mesh_demo/rpl_bt_proxy/prj.conf
+++ b/samples/net/mesh_demo/rpl_bt_proxy/prj.conf
@@ -45,6 +45,7 @@ CONFIG_UART_NRF5_GPIO_CTS_PIN=35
 CONFIG_NETWORKING=y
 
 CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
 
 CONFIG_NET_PKT_RX_COUNT=15
 CONFIG_NET_PKT_TX_COUNT=15
@@ -107,7 +108,7 @@ CONFIG_NET_DEBUG_UDP=n
 CONFIG_NET_DEBUG_CONTEXT=n
 CONFIG_NET_DEBUG_ROUTE=n
 CONFIG_NET_DEBUG_6LO=n
-CONFIG_NET_DEBUG_RPL=y
+CONFIG_NET_DEBUG_RPL=n
 
 CONFIG_NET_STATISTICS=n
 CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
