--- a/tests/net/ieee802154/fragment/prj.conf
+++ b/tests/net/ieee802154/fragment/prj.conf
@@ -17,8 +17,9 @@ CONFIG_NET_BUF_TX_COUNT=35
 
 CONFIG_NET_LOG=y
 CONFIG_SYS_LOG_SHOW_COLOR=y
-CONFIG_NET_DEBUG_IF=y
-CONFIG_NET_DEBUG_CORE=y
-CONFIG_NET_DEBUG_6LO=n
+CONFIG_SYS_LOG_NET_LEVEL=4
+CONFIG_NET_DEBUG_IF=n
+CONFIG_NET_DEBUG_CORE=n
+CONFIG_NET_6LO_DEBUG=n
+CONFIG_NET_DEBUG_L2_IEEE802154=y
 CONFIG_NET_DEBUG_L2_IEEE802154_FRAGMENT=y
-CONFIG_NET_DEBUG_NET_PKT=n
